--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 
   <style>
    .center {
-    width: 200px; /* Ширина элемента в пикселах TEST */
+    width: 200px; /* Ширина элемента в пикселах TESTdfdf */
     padding: 10px; /* Поля вокруг текста */
     margin: auto; /* Выравниваем по центру */
     background: #fc0; /* Цвет фона */
