--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
   <style>
    .center {
     width: 200px; /* Ширина элемента в пикселах TESTdfdf */
-    padding: 10px; /* Поля вокруг текста dfgfdgdgfdghgf */
+    padding: 10px; /* Поля вокруг текста dfgfdgdgffg45htdrthdrhdghgf */
     margin: auto; /* Выравниваем по центру */
     background: #fc0; /* Цвет фона */
    }
