--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 
   <style>
    .center {
-    width: 200px; /* Ширина элемента в пикселах TESTdfdf */
+    width: 200px; /* Ширина элемента в пикселах TESTdfdf  123455657678*/
     padding: 10px; /* Поля вокруг текста dfgfdgdgffg45htdrthdrhdghgf */
     margin: auto; /* Выравниваем по центру */
     background: #fc0; /* Цвет фона */
