--- a/index.html
+++ b/index.html
@@ -8,8 +8,8 @@
 
   <style>
    .center {
-    width: 200px; /* Ширина элемента в пикселах TESTdfdf  123455657678*/
-    padding: 10px; /* Поля вокруг текста dfgfdgdgffg45htdrthdrhdghgf */
+    width: 200px; /* Ширина элемента в пикселах */
+    padding: 10px; /* Поля вокруг текста */
     margin: auto; /* Выравниваем по центру */
     background: #fc0; /* Цвет фона */
    }
