--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
     <div class = "colorpicker1" id="overlaySteel"></div>
     <div class = "colorpicker1" id="rotateObj"></div>
     <div class = "colorpicker1" id="button1"></div>
-    <div class = "colorpicker1" id="button2"></div>
+    <div class = "colorpicker1" id="btnfullscrn"></div>
   </div>
 
   <!-- <div class = "colorpicker1" id="overlaySteel"></div> -->
@@ -96,6 +96,7 @@
   <script src="js/libs/inflate.min.js"></script>
   <script src="js/loaders/FBXLoader.js"></script>
 
+  <script src="js/GUIFunctions.js"></script>
   <script src="js/easingFunc.js"></script>
   <script src="js/animFunctions.js"></script>
   <script src="js/SceneSetup.js"></script>
