--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
     <div class = "colorpicker1" id="overlayGold"></div>
     <div class = "colorpicker1" id="overlaySteel"></div>
     <div class = "colorpicker1" id="rotateObj"></div>
-    <div class = "colorpicker1" id="button1"></div>
+    <div class = "colorpicker1" id="btnPlay"></div>
     <div class = "colorpicker1" id="btnfullscrn"></div>
   </div>
 
