--- a/index.html
+++ b/index.html
@@ -74,35 +74,38 @@
   </script>
   <script src="js/resoursces.js"></script>
   <script src="js/three.min.js"></script>
+  <script src="js/libs/inflate.min.js"></script>
+  <script src="js/loaders/FBXLoader.js"></script>
+  <script src="js/loadHolodUst.js"></script>
+  <script src="js/loadTextures.js"></script>
 
-  <script src="js/postprocessing/EffectComposer.js"></script>
-  <script src="js/postprocessing/RenderPass.js"></script>
-  <script src="js/postprocessing/ShaderPass.js"></script>
-  <script src="js/postprocessing/SAOPass.js"></script>
+  <!-- <script src="js/postprocessing/EffectComposer.js"></script> -->
+  <!-- <script src="js/postprocessing/RenderPass.js"></script> -->
+  <!-- <script src="js/postprocessing/ShaderPass.js"></script> -->
+  <!-- <script src="js/postprocessing/SAOPass.js"></script> -->
 
-  <script src="js/shaders/CopyShader.js"></script>
-  <script src="js/shaders/SAOShader.js"></script>
-  <script src="js/shaders/DepthLimitedBlurShader.js"></script>
-  <script src="js/shaders/UnpackDepthRGBAShader.js"></script>
+  <!-- <script src="js/shaders/CopyShader.js"></script> -->
+  <!-- <script src="js/shaders/SAOShader.js"></script> -->
+  <!-- <script src="js/shaders/DepthLimitedBlurShader.js"></script> -->
+  <!-- <script src="js/shaders/UnpackDepthRGBAShader.js"></script> -->
   <script src="js/shaders/FresnelShader.js"></script>
 
   <script src="js/controls/OrbitControls.js"></script>
-  <script src="js/loaders/RGBELoader.js"></script>
-  <script src="js/loaders/HDRCubeTextureLoader.js"></script>
+  <!-- <script src="js/loaders/RGBELoader.js"></script> -->
+  <!-- <script src="js/loaders/HDRCubeTextureLoader.js"></script> -->
 
-  <script src="js/pmrem/PMREMGenerator.js"></script>
-  <script src="js/pmrem/PMREMCubeUVPacker.js"></script>
+  <!-- <script src="js/pmrem/PMREMGenerator.js"></script> -->
+  <!-- <script src="js/pmrem/PMREMCubeUVPacker.js"></script> -->
 
-  <script src="js/libs/inflate.min.js"></script>
-  <script src="js/loaders/FBXLoader.js"></script>
 
   <script src="js/GUIFunctions.js"></script>
   <script src="js/easingFunc.js"></script>
   <script src="js/animFunctions.js"></script>
   <script src="js/SceneSetup.js"></script>
-  <script src="js/loadTextures.js"></script>
   <script src="js/materials.js"></script>
+
   <script src="js/loadModels.js"></script>
+
   <script src="js/main.js"></script>
   <script src="js/finalOutput.js"></script>
 </body>
