--- a/index.html
+++ b/index.html
@@ -77,6 +77,7 @@
   <script src="js/libs/inflate.min.js"></script>
   <script src="js/loaders/FBXLoader.js"></script>
   <script src="js/loadHolodUst.js"></script>
+  <script src="js/loadStoiki.js"></script>
   <script src="js/loadTextures.js"></script>
 
   <!-- <script src="js/postprocessing/EffectComposer.js"></script> -->
@@ -102,9 +103,8 @@
   <script src="js/easingFunc.js"></script>
   <script src="js/animFunctions.js"></script>
   <script src="js/SceneSetup.js"></script>
-  <script src="js/materials.js"></script>
 
-  <script src="js/loadModels.js"></script>
+  <script src="js/materials.js"></script>
 
   <script src="js/main.js"></script>
   <script src="js/finalOutput.js"></script>
