--- a/index.html
+++ b/index.html
@@ -80,15 +80,15 @@
   <script src="js/loadStoiki.js"></script>
   <script src="js/loadTextures.js"></script>
 
-  <!-- <script src="js/postprocessing/EffectComposer.js"></script> -->
-  <!-- <script src="js/postprocessing/RenderPass.js"></script> -->
-  <!-- <script src="js/postprocessing/ShaderPass.js"></script> -->
-  <!-- <script src="js/postprocessing/SAOPass.js"></script> -->
+  <script src="js/postprocessing/EffectComposer.js"></script>
+  <script src="js/postprocessing/RenderPass.js"></script>
+  <script src="js/postprocessing/ShaderPass.js"></script>
+  <script src="js/postprocessing/SAOPass.js"></script>
 
-  <!-- <script src="js/shaders/CopyShader.js"></script> -->
-  <!-- <script src="js/shaders/SAOShader.js"></script> -->
-  <!-- <script src="js/shaders/DepthLimitedBlurShader.js"></script> -->
-  <!-- <script src="js/shaders/UnpackDepthRGBAShader.js"></script> -->
+  <script src="js/shaders/CopyShader.js"></script>
+  <script src="js/shaders/SAOShader.js"></script>
+  <script src="js/shaders/DepthLimitedBlurShader.js"></script>
+  <script src="js/shaders/UnpackDepthRGBAShader.js"></script>
   <script src="js/shaders/FresnelShader.js"></script>
 
   <script src="js/controls/OrbitControls.js"></script>
