--- a/index.html
+++ b/index.html
@@ -73,12 +73,12 @@
     }
   </script>
   <script src="js/resoursces.js"></script>
-  <script src="js/three.min.js"></script>
+  <script src="js/three.min91.js"></script>
   <script src="js/libs/inflate.min.js"></script>
+  <script src="js/loadTextures.js"></script>
   <script src="js/loaders/FBXLoader.js"></script>
   <script src="js/loadHolodUst.js"></script>
   <script src="js/loadStoiki.js"></script>
-  <script src="js/loadTextures.js"></script>
 
   <script src="js/postprocessing/EffectComposer.js"></script>
   <script src="js/postprocessing/RenderPass.js"></script>
