--- a/index.html
+++ b/index.html
@@ -23,6 +23,7 @@
     <div class = "colorpicker1" id="rotateObj"></div>
     <div class = "colorpicker1" id="btnPlay"></div>
     <div class = "colorpicker1" id="btnfullscrn"></div>
+    <div class = "colorpicker1" id="cameraReset"></div>    
   </div>
   <!-- <div class = "colorpicker1" id="overlaySteel"></div> -->
   <!-- <div id="container" class="testt"></div> -->
@@ -54,10 +55,10 @@
       //gl_FragColor = vec4(vReflect, 1.0); // return redish-purple
     }
   </script>
-  <script src="js/resoursces.js"></script>
   <script src="js/three.min91.js"></script>
   <script src="js/libs/inflate.min.js"></script>
   <script src="js/loaders/FBXLoader.js"></script>
+  <script src="js/resoursces.js"></script>
   <script src="js/loadTextures.js"></script>
   <script src="js/shaders/FresnelShader.js"></script>
     <script src="js/GhostShader.js"></script>
