--- a/index.html
+++ b/index.html
@@ -23,7 +23,16 @@
     <div class = "colorpicker1" id="rotateObj"></div>
     <div class = "colorpicker1" id="btnPlay"></div>
     <div class = "colorpicker1" id="btnfullscrn"></div>
-    <div class = "colorpicker1" id="cameraReset"></div>    
+    <div class = "colorpicker1" id="cameraReset"></div>
+
+    <div id="loading">
+      <div id="center"><div class="content">LOADING...</div></div>      
+      <div id="blockloading">
+        <div id="blockloading_progress"></div>
+      </div>
+    </div>
+
+
   </div>
   <!-- <div class = "colorpicker1" id="overlaySteel"></div> -->
   <!-- <div id="container" class="testt"></div> -->
