--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
   <title>WebGL Demo</title>
   <link rel="icon" type="image/png" href="images/logotip_red_for_krug.png" />
   <link rel="stylesheet" href = "css/style.css"></link>
+  <link href="https://fonts.googleapis.com/css?family=Montserrat" rel="stylesheet">
 </head>
 <body>
 
@@ -26,7 +27,7 @@
     <div class = "colorpicker1" id="cameraReset"></div>
 
     <div id="loading">
-      <div id="center"><div class="content">LOADING...</div></div>      
+      <div id="center"><div class="content">LOADING...</div></div>
       <div id="blockloading">
         <div id="blockloading_progress"></div>
       </div>
