--- a/index.html
+++ b/index.html
@@ -25,8 +25,8 @@
     <canvas id = "canvas-exemple"></canvas>
 
     <div id="overlay">
-      <div><span id="eMail"></span></div>
-      <div><span id="angle"></span></div>
+      <div><span id="param1"></span></div>
+      <div><span id="param2"></span></div>
     </div>
 
     <div class = "colorpicker1" id="overlayGold"></div>
@@ -37,7 +37,7 @@
     <div class = "colorpicker1" id="cameraReset"></div>
 
     <div id="loading">
-      <div id="center"><div class="content">LOADING...</div></div>
+      <div id="center"><div class="content">LOADING 3D MODEL...</div></div>
       <div id="blockloading">
         <div id="blockloading_progress"></div>
       </div>
