--- a/index.html
+++ b/index.html
@@ -95,6 +95,7 @@
   <script src="js/animFunctions.js"></script>
 
   <script src="js/SceneSetup.js"></script>
+  <script src="js/HolodUstModes.js"></script>
   <script src="js/main.js"></script>
   <script src="js/finalOutput.js"></script>
 </body>
