--- a/index.html
+++ b/index.html
@@ -24,17 +24,29 @@
   <div class="container">
     <canvas id = "canvas-exemple"></canvas>
 
-    <div id="overlay">
+    <div class = "header">
+      <div id="header1">
+        <p style = "font-weight: 900" >WebGL</p>
+        <p style = "font-size: 19px">technology</p>
+      </div>
+      <div id="header2">3dfine@mail.ru</div>
+
+    </div>
+
+    <div class="overlay" style = "display: none">
       <div><span id="param1"></span></div>
       <div><span id="param2"></span></div>
     </div>
 
-    <div class = "colorpicker1" id="overlayGold"></div>
-    <div class = "colorpicker1" id="overlaySteel"></div>
-    <div class = "colorpicker1" id="rotateObj"></div>
-    <div class = "colorpicker1" id="btnPlay"></div>
-    <div class = "colorpicker1" id="btnfullscrn"></div>
-    <div class = "colorpicker1" id="cameraReset"></div>
+    <div class = "colorpicker1" id="btnhide"></div>
+    <div class = "colorpicker1" id="btnbrony"></div>
+    <div class = "colorpicker1" title="Вращать" id="rotateObj"></div>
+    <div class = "colorpicker1" title="Запустить" id="btnPlay"></div>
+    <div class = "colorpicker1" title="Во весь экран" id="btnfullscrn"></div>
+    <div class = "colorpicker1" title="Сбросить камеру" id="cameraReset"></div>
+    <div class = "textblock1">Современная экономичная климатическая установка.<br><br>
+      Эргономичный дизайн вписывается в пространства с высокими эстетическими требованиями.<br><br>
+      Надёжная и эффективная работа обеспечивает соответвующий уровень комфорта в помещениях.</div>
 
     <div id="loading">
       <div id="center"><div class="content">LOADING 3D MODEL...</div></div>
