--- a/index.html
+++ b/index.html
@@ -14,6 +14,7 @@
   <meta charset="utf-8">
   <title>WebGL Demo</title>
   <link rel="icon" type="image/png" href="images/logotip_red_for_krug.png" />
+  <link rel="stylesheet" href = "css/anims.css"></link>
   <link rel="stylesheet" href = "css/style.css"></link>
   <link href="https://fonts.googleapis.com/css?family=Montserrat" rel="stylesheet">
 </head>
@@ -29,8 +30,8 @@
         <p style = "font-weight: 900" >WebGL</p>
         <p style = "font-size: 19px">technology</p>
       </div>
-      <div id="header2">3dfine@mail.ru</div>
-
+      <div id="header3">3D ПРЕЗЕНТАЦИЯ</div>
+      <div id="header2">3dfine@mail.ru<br>+7 919 638 91 52</div>
     </div>
 
     <div class="overlay" style = "display: none">
@@ -44,9 +45,10 @@
     <div class = "colorpicker1" title="Запустить" id="btnPlay"></div>
     <div class = "colorpicker1" title="Во весь экран" id="btnfullscrn"></div>
     <div class = "colorpicker1" title="Сбросить камеру" id="cameraReset"></div>
-    <div class = "textblock1">Современная экономичная климатическая установка.<br><br>
+    <div id = "textblock1">Современная экономичная климатическая установка.<br><br>
       Эргономичный дизайн вписывается в пространства с высокими эстетическими требованиями.<br><br>
-      Надёжная и эффективная работа обеспечивает соответвующий уровень комфорта в помещениях.</div>
+      Надёжная и эффективная работа обеспечивает соответвующий уровень комфорта в помещениях.
+    </div>
 
     <div id="loading">
       <div id="center"><div class="content">LOADING 3D MODEL...</div></div>
