--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
         <p style = "font-weight: 900" >WebGL</p>
         <p style = "font-size: 19px">technology</p>
       </div>
-      <div id="header3">3D ПРЕЗЕНТАЦИЯ</div>
+      <div id="header3">&copy; 3D ПРЕЗЕНТАЦИЯ</div>
       <div id="header2">3dfine@mail.ru<br>+7 919 638 91 52</div>
     </div>
 
@@ -39,12 +39,14 @@
       <div><span id="param2"></span></div>
     </div>
 
+
     <div class = "colorpicker1" id="btnhide"></div>
     <div class = "colorpicker1" id="btnbrony"></div>
     <div class = "colorpicker1" title="Вращать" id="rotateObj"></div>
     <div class = "colorpicker1" title="Запустить" id="btnPlay"></div>
     <div class = "colorpicker1" title="Во весь экран" id="btnfullscrn"></div>
     <div class = "colorpicker1" title="Сбросить камеру" id="cameraReset"></div>
+
     <div id = "textblock1">Современная экономичная климатическая установка.<br><br>
       Эргономичный дизайн вписывается в пространства с высокими эстетическими требованиями.<br><br>
       Надёжная и эффективная работа обеспечивает соответвующий уровень комфорта в помещениях.
