--- a/index.html
+++ b/index.html
@@ -46,10 +46,21 @@
     <div class = "colorpicker1" title="Запустить" id="btnPlay"></div>
     <div class = "colorpicker1" title="Во весь экран" id="btnfullscrn"></div>
     <div class = "colorpicker1" title="Сбросить камеру" id="cameraReset"></div>
-
-    <div id = "textblock1">Современная экономичная климатическая установка.<br><br>
-      Эргономичный дизайн вписывается в пространства с высокими эстетическими требованиями.<br><br>
-      Надёжная и эффективная работа обеспечивает соответвующий уровень комфорта в помещениях.
+    <div class = "colorpicker1" id="btnTemp"></div>    
+    <div id = "text11" style = "display: none">
+      <p>Современная экономичная климатическая установка.</p>
+      <p>Эргономичный дизайн вписывается в пространства с высокими эстетическими требованиями.</p>
+      <p>Надёжная и эффективная работа обеспечивает соответвующий уровень комфорта в помещениях.</p>
+      <p>Предназначено для обеспечения поддержания в помещении необходимой температуры воздуха.</p>
+      <p>Применяется для кондиционирования помещений, имеющих большую площадь, или же состоящих из нескольких комнат, соединенных общей вентиляционной системой.</p>
+      <p>Установить оборудование можно как на крыше, так и на специальных рамных конструкциях.</p>
+      <p>Высокая производительность, эффективно для оснащения торговых центров, кинотеатров, спортивных объектов.</p>
+      <p>Может быть оборудовано специальными приспособлениями для подогрева воздуха, поступающего с улицы.</p>
+      <p>Наиболее целесообразна установка на одно - и двухэтажных зданиях, имеющих большую площадь внутренних помещений.</p>
+      <p>Помогает сэкономить на покупке дополнительного отопительного оборудования.</p>
+      <p>Несомненным преимуществом является надежность и простота в эксплуатации, а также то, что они не портят дизайн своим внешним видом.</p>
+    </div>
+    <div id = "textblock1">
     </div>
 
     <div id="loading">
@@ -91,6 +102,7 @@
       //gl_FragColor = vec4(vReflect, 1.0); // return redish-purple
     }
   </script>
+  <script src="js/jquery-3.3.1.min.js"></script>
   <script src="js/three.min91.js"></script>
   <script src="js/libs/inflate.min.js"></script>
   <script src="js/loaders/FBXLoader.js"></script>
