--- a/index.html
+++ b/index.html
@@ -42,13 +42,14 @@
 
   <div class = "cntrlPanel" id="controlPanel">
     <div class = "buttonA" title="Не нажимай эту кнопку!" id="btnTemp"></div>
+    <div class = "buttonA" title="Скрыть/отобразить броню" id="btnShowHideBronya"></div>
+    <div class = "buttonA" title="Режим выбора объекта" id="btnSelectObject"></div>    
     <div class = "buttonA" title="Показать общую информацию" id="btnShow1LevellInfo"></div>
     <div class = "buttonA" title="Показать подробную информацию" id="btnShow2LevellInfo"></div>
     <div class = "buttonA" title="Как это работает" id="btnShowHowItWork"></div>
-    <div class = "buttonA" title="Скрыть/отобразить броню" id="btnShowHideBronya"></div>
     <div class = "buttonA" title="Остановить анимацию" id="btnStopAnim"></div>
-    <div class = "buttonA" title="Вращать камеру" id="btnRotateCamera"></div>
     <div class = "buttonA" title="Сбросить камеру" id="btnResetCemera"></div>
+    <div class = "buttonA" title="Вращать камеру" id="btnRotateCamera"></div>
     <div class = "buttonA" title="Во весь экран" id="btnFullscrn"></div>
   </div>
     <section style = "display: none">
