--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
     <div class = "header">
       <div id="header1">
         <p style = "font-weight: 900" >WebGL</p>
-        <p style = "font-size: 19px">technology</p>
+        <p style = "font-size: 14px">technology</p>
       </div>
       <div id="header3">&copy; 3D ПРЕЗЕНТАЦИЯ</div>
       <div id="header2">3dfine@mail.ru<br>+7 919 638 91 52</div>
@@ -40,18 +40,20 @@
       <div><span id="param2"></span></div>
     </div>
 
-  <div class = "cntrlPanel" id="controlPanel">
-    <div class = "buttonA" title="Не нажимай эту кнопку!" id="btnTemp"></div>
-    <div class = "buttonA" title="Скрыть/отобразить броню" id="btnShowHideBronya"></div>
-    <div class = "buttonA" title="Режим выбора объекта" id="btnSelectObject"></div>    
-    <div class = "buttonA" title="Показать общую информацию" id="btnShow1LevellInfo"></div>
-    <div class = "buttonA" title="Показать подробную информацию" id="btnShow2LevellInfo"></div>
-    <div class = "buttonA" title="Как это работает" id="btnShowHowItWork"></div>
-    <div class = "buttonA" title="Остановить анимацию" id="btnStopAnim"></div>
-    <div class = "buttonA" title="Сбросить камеру" id="btnResetCemera"></div>
-    <div class = "buttonA" title="Вращать камеру" id="btnRotateCamera"></div>
-    <div class = "buttonA" title="Во весь экран" id="btnFullscrn"></div>
-  </div>
+    <div class = "cntrlPanel" id="cameraControl">
+      <div class = "buttonA" title="Сбросить камеру" id="btnResetCemera"></div>
+      <div class = "buttonA" title="Вращать камеру" id="btnRotateCamera"></div>
+      <div class = "buttonA" title="Во весь экран" id="btnFullscrn"></div>
+    </div>
+    <div class = "cntrlPanel" id="controlPanel">
+      <div class = "buttonA" title="Не нажимай эту кнопку!" id="btnTemp"></div>
+      <div class = "buttonA" title="Скрыть/отобразить броню" id="btnShowHideBronya"></div>
+      <div class = "buttonA" title="Режим выбора объекта" id="btnSelectObject"></div>
+      <div class = "buttonA" title="Показать общую информацию" id="btnShow1LevellInfo"></div>
+      <div class = "buttonA" title="Показать подробную информацию" id="btnShow2LevellInfo"></div>
+      <div class = "buttonA" title="Как это работает" id="btnShowHowItWork"></div>
+      <div class = "buttonA" title="Остановить анимацию" id="btnStopAnim"></div>
+    </div>
     <section style = "display: none">
       <p>Современная экономичная климатическая установка.</p>
       <p>Эргономичный дизайн вписывается в пространства с высокими эстетическими требованиями.</p>
