--- a/index.html
+++ b/index.html
@@ -31,7 +31,8 @@
         <p style = "font-weight: 900" >WebGL</p>
         <p style = "font-size: 14px">technology</p>
       </div>
-      <div id="header3">&copy; 3D ПРЕЗЕНТАЦИЯ</div>
+      <!-- <div id="header3">3D PRESENTATION</div> -->
+      <div id="header3">3D ПРЕЗЕНТАЦИЯ</div>
       <div id="header2">3dfine@mail.ru<br>+7 919 638 91 52</div>
     </div>
 
@@ -68,17 +69,17 @@
       <p>Несомненным преимуществом является надежность и простота в эксплуатации, а также то, что они не портят дизайн своим внешним видом.</p>
     </section>
 
-      <div class = "testtt" id = "ust1_component1">Осевые вентиляторы конденсатора и воздушный конденсатор</div>
-      <div class = "testtt" id = "ust1_component3">Компрессорный блок</div>
-      <div class = "testtt" id = "ust1_component4">Воздушый фильтр вытяжного воздуха</div>
-      <div class = "testtt" id = "ust1_component5">Фреоновый испаритель с каплеуловителем</div>
-      <div class = "testtt" id = "ust1_component6">Приточный и вытяжной вентиляторы с ЕС-двигателем</div>
-      <div class = "testtt" id = "ust1_component7">Пластинчатый рекуператор</div>
-      <div class = "testtt" id = "ust1_component8">Воздушный фильтр приточного воздуха</div>
-      <div class = "testtt" id = "ust1_component9">Воздухозаборный клапан</div>
-      <div class = "testtt" id = "ust1_component10">Клапан выбросного воздуха</div>
-      <div class = "testtt" id = "ust1_component11">Водяной нагреватель</div>
-      <div class = "testtt" id = "ust1_component12">Регулируемый воздухораспределитель</div>
+      <p class = "hiddenP" id = "ust1_component1">Осевые вентиляторы конденсатора</p>
+      <p class = "hiddenP" id = "ust1_component3">Воздушный конденсатор<br>и компрессорный блок</p>
+      <p class = "hiddenP" id = "ust1_component4">Воздушый фильтр<br>вытяжного воздуха</p>
+      <p class = "hiddenP" id = "ust1_component5">Фреоновый испаритель<br>с каплеуловителем</p>
+      <p class = "hiddenP" id = "ust1_component6">Приточный и вытяжной вентиляторы<br>с ЕС-двигателем</p>
+      <p class = "hiddenP" id = "ust1_component7">Пластинчатый рекуператор</p>
+      <p class = "hiddenP" id = "ust1_component8">Воздушный фильтр приточного воздуха</p>
+      <p class = "hiddenP" id = "ust1_component9">Воздухозаборный клапан</p>
+      <p class = "hiddenP" id = "ust1_component10">Клапан выбросного воздуха</p>
+      <p class = "hiddenP" id = "ust1_component11">Водяной нагреватель</p>
+      <p class = "hiddenP" id = "ust1_component12">Регулируемый воздухораспределитель</p>
 
     <div id = "textblock1">
     </div>
@@ -90,6 +91,7 @@
       </div>
     </div>
 
+    <div id = "copyRight" >&copy; Zaripov A.E., 2018</div>
 
   </div>
   <!-- <div class = "colorpicker1" id="overlaySteel"></div> -->
