--- a/index.html
+++ b/index.html
@@ -91,7 +91,7 @@
       </div>
     </div>
 
-    <div id = "copyRight" >&copy; Zaripov A.E., 2018</div>
+    <div id = "copyRight" >&copy A.E. Zaripov, 2018</div>
 
   </div>
   <!-- <div class = "colorpicker1" id="overlaySteel"></div> -->
