--- a/index.html
+++ b/index.html
@@ -67,19 +67,27 @@
       <p>Наиболее целесообразна установка на одно - и двухэтажных зданиях, имеющих большую площадь внутренних помещений.</p>
       <p>Помогает сэкономить на покупке дополнительного отопительного оборудования.</p>
       <p>Несомненным преимуществом является надежность и простота в эксплуатации, а также то, что они не портят дизайн своим внешним видом.</p>
+      <p id = "ust1_1LevellInfo1">Эргономичный дизайн вписывается в пространства с высокими эстетическими требованиями</p>
+      <p id = "ust1_1LevellInfo2">Надёжная и эффективная работа обеспечивает соответвующий уровень комфорта в помещениях</p>
+      <p id = "ust1_1LevellInfo3">Предназначено для обеспечения поддержания в помещении необходимой температуры воздуха</p>
+      <p id = "ust1_1LevellInfo4">Наиболее целесообразна установка на одно - и двухэтажных зданиях, имеющих большую площадь внутренних помещений</p>
+      <p id = "ust1_1LevellInfo5">Установить оборудование можно как на крыше, так и на специальных рамных конструкциях</p>
+      <p id = "ust1_1LevellInfo6">Высокая производительность, эффективно для оснащения торговых центров, кинотеатров, спортивных объектов</p>
+      <p id = "ust1_1LevellInfo7">Помогает сэкономить на покупке дополнительного отопительного оборудования</p>
+
+      <p id = "ust1_component1">Осевые вентиляторы конденсатора</p>
+      <p id = "ust1_component3">Воздушный конденсатор<br>и компрессорный блок</p>
+      <p id = "ust1_component4">Воздушый фильтр<br>вытяжного воздуха</p>
+      <p id = "ust1_component5">Фреоновый испаритель<br>с каплеуловителем</p>
+      <p id = "ust1_component6">Приточный и вытяжной вентиляторы<br>с ЕС-двигателем</p>
+      <p id = "ust1_component7">Пластинчатый рекуператор</p>
+      <p id = "ust1_component8">Воздушный фильтр приточного воздуха</p>
+      <p id = "ust1_component9">Воздухозаборный клапан</p>
+      <p id = "ust1_component10">Клапан выбросного воздуха</p>
+      <p id = "ust1_component11">Водяной нагреватель</p>
+      <p id = "ust1_component12">Регулируемый воздухораспределитель</p>
     </section>
 
-      <p class = "hiddenP" id = "ust1_component1">Осевые вентиляторы конденсатора</p>
-      <p class = "hiddenP" id = "ust1_component3">Воздушный конденсатор<br>и компрессорный блок</p>
-      <p class = "hiddenP" id = "ust1_component4">Воздушый фильтр<br>вытяжного воздуха</p>
-      <p class = "hiddenP" id = "ust1_component5">Фреоновый испаритель<br>с каплеуловителем</p>
-      <p class = "hiddenP" id = "ust1_component6">Приточный и вытяжной вентиляторы<br>с ЕС-двигателем</p>
-      <p class = "hiddenP" id = "ust1_component7">Пластинчатый рекуператор</p>
-      <p class = "hiddenP" id = "ust1_component8">Воздушный фильтр приточного воздуха</p>
-      <p class = "hiddenP" id = "ust1_component9">Воздухозаборный клапан</p>
-      <p class = "hiddenP" id = "ust1_component10">Клапан выбросного воздуха</p>
-      <p class = "hiddenP" id = "ust1_component11">Водяной нагреватель</p>
-      <p class = "hiddenP" id = "ust1_component12">Регулируемый воздухораспределитель</p>
 
     <div id = "textblock1">
     </div>
