--- a/index.html
+++ b/index.html
@@ -42,9 +42,9 @@
     </div>
 
     <div class = "cntrlPanel" id="cameraControl">
-      <div class = "buttonA" title="Сбросить камеру" id="btnResetCemera"></div>
-      <div class = "buttonA" title="Вращать камеру" id="btnRotateCamera"></div>
-      <div class = "buttonA" title="Во весь экран" id="btnFullscrn"></div>
+      <div class = "buttonB" title="Сбросить камеру" id="btnResetCemera"></div>
+      <div class = "buttonB" title="Вращать камеру" id="btnRotateCamera"></div>
+      <div class = "buttonB" title="Во весь экран" id="btnFullscrn"></div>
     </div>
 
     <div id = "plyRed"></div>
