--- a/index.html
+++ b/index.html
@@ -60,6 +60,8 @@
 
     <div id = "textblock1"></div>
 
+    <div id = "help1"></div>
+
     <div id="loading">
       <div id="center"><div class="content">LOADING 3D MODEL...</div></div>
       <div id="blockloading">
