--- a/index.html
+++ b/index.html
@@ -86,10 +86,11 @@
       <div class = "buttonA" title="Подробная информация" id="btnShow2LevellInfo"></div>
       <div class = "buttonA" title="Как это работает" id="btnShowHowItWork"></div>
       <div class = "buttonA" title="Как это работает" id="btnShowHowItWork2"></div>
-      <div class = "buttonA" title="Остановить анимацию" id="btnStopAnim"></div>
+      <div class = "buttonA" title="Стоп" id="btnStopAnim"></div>
     </div>
 
     <div id = "textblock1"></div>
+    <div id = "descriptionblock"></div>
 
     <div id = "help1"></div>
 
