--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
 <head>
     <!-- Yandex.Metrika counter -->
-  <script type="text/javascript" >
+  <!-- <script type="text/javascript" >
       (function (d, w, c) {
           (w[c] = w[c] || []).push(function() {
               try {
@@ -26,17 +26,18 @@
           } else { f(); }
       })(document, window, "yandex_metrika_callbacks");
   </script>
-  <noscript><div><img src="https://mc.yandex.ru/watch/48525350" style="position:absolute; left:-9999px;" alt="" /></div></noscript>
+  <noscript><div><img src="https://mc.yandex.ru/watch/48525350" style="position:absolute; left:-9999px;" alt="" /></div></noscript> -->
   <!-- /Yandex.Metrika counter -->
+  
     <!-- Global site tag (gtag.js) - Google Analytics -->
-  <script async src="https://www.googletagmanager.com/gtag/js?id=UA-88386892-3"></script>
+  <!-- <script async src="https://www.googletagmanager.com/gtag/js?id=UA-88386892-3"></script>
   <script>
     window.dataLayer = window.dataLayer || [];
     function gtag(){dataLayer.push(arguments);}
     gtag('js', new Date());
 
     gtag('config', 'UA-88386892-3');
-  </script>
+  </script> -->
 
   <meta charset="utf-8">
   <title>WebGL Demo</title>
