--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
       <div class = "buttonA" id="btnColor3"></div>
     </div>
     <div class = "cntrlPanel" id="controlUsadba">
-      <div class = "buttonA" id="btnUsadbaFull">F</div>
+      <div class = "buttonA" id="btnUsadbaFull">R</div>
       <div class = "buttonA" id="btn2Floor" >2F</div>
       <div class = "buttonA" id="btn1Floor">1F</div>
     </div>
